outer and inner loop mort calc

--- a/lesson_2/mortgage_calculator_messages.yml
+++ b/lesson_2/mortgage_calculator_messages.yml
@@ -4,3 +4,5 @@ name: "Hi, #{name}"
 loan_amt: "Please enter the amount of your home loan:"
 apr: "Please enter the Annual Percentage Rate (APR) of your loan:"
 loan_years: "Please enter the duration of your loan in years:"
+try_valid_number: "Hm. that doesn't look like a value number"
+try_again: "Do you want to perform another calculation? (Y to calculate again)"
