update to empty float

--- a/lesson_2/mortgage_calculator_messages.yml
+++ b/lesson_2/mortgage_calculator_messages.yml
@@ -6,3 +6,4 @@ loan_years: "Please enter the duration of your loan in years."
 try_valid_number: "Try again, please enter a valid number."
 try_again: "Do you want to perform another mortgage calculation? (Y to calculate again)."
 thank_you: "Thank you for using the mortgage calculator, good bye!"
+#test
