update welcome text

--- a/lesson_2/mortgage_calculator_messages.yml
+++ b/lesson_2/mortgage_calculator_messages.yml
@@ -1,8 +1,8 @@
-welcome: "Welcome to the mortgage calculator, please enter your name to get started."
-valid_name: "Make sure to use a valid name."
-loan_amt: "Please enter the total amount of your mortgage."
+welcome: "Welcome to the mortgage calculator; to determine your monthly mortgage payment, please enter your name to get started."
+valid_name: "Please make sure to enter a valid name."
+loan_amt: "Please enter the amount of your mortgage."
 apr: "Please enter the Annual Percentage Rate (APR) of your loan."
-pos_num_apr: "The APR must be a positive number, try again."
+pos_num_apr: "The APR must be a positive number, please try again."
 loan_years: "Please enter the duration of your loan in years."
 try_valid_number: "Try again, please enter a valid number."
 try_again: "Do you want to perform another mortgage calculation? (Y to calculate again)."
