--- a/lesson_2/rock_paper_scissors/rock_paper_scissors_spock_lizard_messages.yml
+++ b/lesson_2/rock_paper_scissors/rock_paper_scissors_spock_lizard_messages.yml
@@ -5,4 +5,4 @@ u_won: "You won!"
 c_win: "Computer won!"
 tie: "It's a tie!"
 play_again: "Do you want to play again?"
-thank_you: "Thank you for playing. Good bye!"
+thank_you: "Thank you for playing. See ya!"
